@@ -1,3 +1,8 @@
+* SVN
+
+* fix changeset/public reloading issues
+* allow configurable session options
+
 * 0.9.1 (beta)
 
 * fix js cache issues
